--- a/src/BD26_code_ElieMakhoul_MichaelAoun_LennyFraise.ipynb
+++ b/src/BD26_code_ElieMakhoul_MichaelAoun_LennyFraise.ipynb
@@ -2962,7 +2962,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "“BD26_code_ElieMakhoul_MichaelAoun_LennyFraise",
+   "notebookName": "BD26_code_ElieMakhoul_MichaelAoun_LennyFraise",
    "widgets": {}
   },
   "colab": {
